--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
     - conda update -q conda
     - conda install gtest cmake -c conda-forge
     - conda install xtensor==0.13.0 -c conda-forge
-    - conda install zlib openimageio -c QuantStack -c conda-forge
+    - conda install zlib openimageio boost==1.65.1 -c QuantStack -c conda-forge
     # Testing
     - mkdir build
     - cd build
