test with gcc-6

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,10 @@ install:
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
     - conda install gtest cmake -c conda-forge
-    - conda install xtensor==0.13.0 -c conda-forge
-    - sudo apt-get install -y libopenimageio-dev
+    - conda install xtensor==0.13.2 -c conda-forge
+    - conda install gcc-6 openimageio libsndfile -c QuantStack -c conda-forge
+    - export CXX=$CONDA_PREFIX/bin/g++
+    - export CC=$CONDA_PREFIX/bin/gcc
     # Testing
     - mkdir build
     - cd build
