export compiler from conda

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,8 @@ env:
     - MINCONDA_VERSION="latest"
     - MINCONDA_LINUX="Linux-x86_64"
     - MINCONDA_OSX="MacOSX-x86_64"
-before_install:
-    - |
-      # Configure build variables
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        if [[ "$COMPILER" == "gcc" ]]; then
-          export CXX=g++-$GCC CC=gcc-$GCC;
-        fi
-        if [[ "$COMPILER" == "clang" ]]; then
-          export CXX=clang++-$CLANG CC=clang-$CLANG;
-        fi
-      elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        export CXX=clang++ CC=clang;
-      fi
+# before_install:
+
 install:
     # Define the version of miniconda to download
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -47,6 +36,8 @@ install:
     # Start test environement
     - conda env create -f ./test/test-environment.yml
     - source activate test-xtensorio
+    - export CC=$CONDA_PREFIX/bin/gcc
+    - export CXX=$CONDA_PREFIX/bin/g++
     # Testing
     - mkdir build
     - cd build
