add xaudio.hpp (#1)
testing, and xaudio.hpp

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-dist: precise
+dist: trusty
 env:
 matrix:
   fast_finish: true
@@ -17,19 +17,8 @@ env:
     - MINCONDA_VERSION="latest"
     - MINCONDA_LINUX="Linux-x86_64"
     - MINCONDA_OSX="MacOSX-x86_64"
-before_install:
-    - |
-      # Configure build variables
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        if [[ "$COMPILER" == "gcc" ]]; then
-          export CXX=g++-$GCC CC=gcc-$GCC;
-        fi
-        if [[ "$COMPILER" == "clang" ]]; then
-          export CXX=clang++-$CLANG CC=clang-$CLANG;
-        fi
-      elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-        export CXX=clang++ CC=clang;
-      fi
+# before_install:
+
 install:
     # Define the version of miniconda to download
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -43,13 +32,19 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install gtest cmake -c conda-forge
-    - conda install xtensor==0.13.0 -c conda-forge
-    - conda install zlib openimageio -c QuantStack -c conda-forge
+    - conda info -a
+    # Start test environement
+    - conda env create -f ./test/test-environment.yml
+    - source activate test-xtensorio
+    - export CC=$CONDA_PREFIX/bin/gcc
+    - export CXX=$CONDA_PREFIX/bin/g++
+    # from conda toolchain package
+    - export LDFLAGS="${LDFLAGS} -Wl,-rpath,$CONDA_PREFIX/lib"
+    - export LINKFLAGS="${LDFLAGS}"
     # Testing
     - mkdir build
     - cd build
-    - cmake -DBUILD_TESTS=ON -DDOWNLOAD_GTEST=ON ..;
+    - cmake -DBUILD_TESTS=ON -DDOWNLOAD_GTEST=ON -DCMAKE_PREFIX_PATH=$CONDA_PREFIX ..;
     - make -j2 test_xtensor_io
     - cd test
 script:
