--- a/include/xtensor-io/xtensor_io_config.hpp.in
+++ b/include/xtensor-io/xtensor_io_config.hpp.in
@@ -13,4 +13,8 @@
 #define XTENSOR_IO_VERSION_MINOR 2
 #define XTENSOR_IO_VERSION_PATCH 0
 
+#pragma cling add_library_path(@XTENSOR_IO_CLING_LIBRARY_DIR_64@)
+#pragma cling add_library_path(@XTENSOR_IO_CLING_LIBRARY_DIR_32@)
+#pragma cling add_library_path(@XTENSOR_IO_CLING_LIBRARY_DIR@)
+
 #endif
