--- a/include/xtensor-io/xtensor_io_config.hpp.in
+++ b/include/xtensor-io/xtensor_io_config.hpp.in
@@ -1,5 +1,5 @@
 /***************************************************************************
-* Copyright (c) 2016, Johan Mabille, Sylvain Corlay and Wolf Vollprecht    *
+* Copyright (c) 2016, Wolf Vollprecht, Sylvain Corlay and Johan Mabille    *
 *                                                                          *
 * Distributed under the terms of the BSD 3-Clause License.                 *
 *                                                                          *
