--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,12 @@
 name: xtensor-io
 channels:
-    - nodefaults
-    - QuantStack
-    - conda-forge
+  - nodefaults
+  - QuantStack
+  - conda-forge
 dependencies:
   - xtensor
+  - boost ==1.65.1
+  - boost-cpp ==1.65.1
   - xtensor-io
   - xeus-cling
   - xwidgets
