--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - xtensor
   - boost ==1.65.1
   - boost-cpp ==1.65.1
+  - widgetsnbextension
   - xtensor-io
   - xeus-cling
   - xwidgets
