--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,10 +63,34 @@ OPTION(BUILD_TESTS "xtensor-io test suite" OFF)
 OPTION(DOWNLOAD_GTEST "build gtest from downloaded sources" OFF)
 OPTION(DOWNLOAD_GBENCHMARK "download google benchmark and build from source" ON)
 
+find_package(OIIO REQUIRED)
+find_package(ZLIB REQUIRED)
+find_package(SndFile REQUIRED)
+
+include_directories(${OIIO_INCLUDE_DIRS})
+include_directories(${LIBSNDFILE_INCLUDE_DIRS})
+include_directories(${ZLIB_INCLUDE_DIRS})
+include_directories(${GTEST_INCLUDE_DIRS})
+
 add_library(xtensor-io INTERFACE)
-target_include_directories(xtensor-io INTERFACE $<BUILD_INTERFACE:${XTENSOR_IO_INCLUDE_DIR}>
-                                                $<INSTALL_INTERFACE:include>)
-target_link_libraries(xtensor-io INTERFACE xtensor)
+target_include_directories(xtensor-io
+  INTERFACE
+    $<BUILD_INTERFACE:${XTENSOR_IO_INCLUDE_DIR}>
+    # LIBRARIES
+    $<BUILD_INTERFACE:${OIIO_INCLUDE_DIRS}>
+    $<BUILD_INTERFACE:${LIBSNDFILE_INCLUDE_DIRS}>
+    $<BUILD_INTERFACE:${ZLIB_INCLUDE_DIRS}>
+    # INSTALLATIOn
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(xtensor-io
+  INTERFACE
+    xtl
+    xtensor
+    ${OIIO_LIBRARIES}
+    ${ZLIB_LIBRARIES}
+    ${LIBSNDFILE_LIBRARIES}
+)
 
 if(DOWNLOAD_GTEST OR GTEST_SRC_DIR)
     set(BUILD_TESTS ON)
