--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,8 +11,8 @@ cmake_minimum_required(VERSION 3.8)
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     project(xtensor-io-test)
 
-    find_package(xtensor REQUIRED CONFIG)
-    set(XTENSOR_INCLUDE_DIR ${xtensor_INCLUDE_DIRS})
+    find_package(xtensor-io REQUIRED CONFIG)
+    set(XTENSOR_IO_INCLUDE_DIR ${xtensor_INCLUDE_DIRS})
 endif ()
 
 message(STATUS "Forcing tests build type to Release")
@@ -62,7 +62,7 @@ if(DOWNLOAD_GTEST OR GTEST_SRC_DIR)
     # Add googletest directly to our build. This defines
     # the gtest and gtest_main targets.
     add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                     ${CMAKE_CURRENT_BINARY_DIR}/googletest-build)
+                     ${CMAKE_CURRENT_BINARY_DIR}/googletest-build EXCLUDE_FROM_ALL)
 
     set(GTEST_INCLUDE_DIRS "${gtest_SOURCE_DIR}/include")
     set(GTEST_BOTH_LIBRARIES  gtest_main gtest)
@@ -79,8 +79,6 @@ set(XTENSOR_IO_TESTS
     test_ximage.cpp
     test_xaudio.cpp
 )
-
-set(XTENSOR_IO_TARGET test_xtensor_io)
 
 # Add files for tests
 set(XTENSOR_IO_FILES
@@ -99,20 +97,20 @@ foreach(filename IN LISTS XTENSOR_IO_FILES)
         ${CMAKE_CURRENT_BINARY_DIR}/files/${filename} COPYONLY)
 endforeach()
 
-add_executable(${XTENSOR_IO_TARGET} ${XTENSOR_IO_TESTS} ${XTENSOR_IO_HEADERS})
+add_executable(test_xtensor_io ${XTENSOR_IO_TESTS} ${XTENSOR_IO_HEADERS})
 if(DOWNLOAD_GTEST OR GTEST_SRC_DIR)
-    add_dependencies(${XTENSOR_IO_TARGET} gtest_main)
+    add_dependencies(test_xtensor_io gtest_main)
 endif()
 
 if(DEFINED CMAKE_INSTALL_PREFIX)
-  set_target_properties(${XTENSOR_IO_TARGET}
+  set_target_properties(test_xtensor_io
     PROPERTIES
       INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
       BUILD_WITH_INSTALL_RPATH ON
   )
 endif()
 
-target_link_libraries(${XTENSOR_IO_TARGET}
+target_link_libraries(test_xtensor_io
   PUBLIC
     xtensor-io
     ${CMAKE_DL_LIBS}
@@ -120,6 +118,8 @@ target_link_libraries(${XTENSOR_IO_TARGET}
     ${CMAKE_THREAD_LIBS_INIT}
 )
 
+target_include_directories(test_xtensor_io PRIVATE ${XTENSOR_IO_INCLUDE_DIR})
+
 add_custom_target(xtest
     COMMAND test_xtensor_io
-    DEPENDS ${XTENSOR_IO_TARGET})
+    DEPENDS test_xtensor_io)
