--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
       fi
     # Install host dependencies
     - conda install openimageio libsndfile zlib highfive xtensor=0.19.2 -c conda-forge
+    - conda install ffmpeg=3.4.2 -c conda-forge  # openimageio is missing ffmpedg as a runtime requirement
     # Install build dependencies
     - conda install cmake -c conda-forge
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
