implement ZIP64 npz reading
Note that the files for testing are using ZIP64 local headers
but not V2 central directory records.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -86,6 +86,8 @@ set(XTENSOR_IO_FILES
     archive.h5
     compressed.npz
     uncompressed.npz
+    compressed64.npz
+    uncompressed64.npz
     test.png
     test.jpg
     test.gif
