--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ install:
     # Install host dependencies
     - mamba install openimageio=2.1.10 libsndfile=1.0.28 zlib=1.2.11 highfive=2.1.1 blosc xtensor=0.21.2 -c conda-forge
     - mamba install ffmpeg=4.1.3 -c conda-forge  # openimageio is missing ffmpedg as a runtime requirement
+    - mamba install gdal=3.1.2 -c conda-forge # ~127 MiB with dependencies.
     # Install build dependencies
     - mamba install cmake -c conda-forge
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
