--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ matrix:
   fast_finish: true
   include:
     - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=gcc GCC=4.9
     - os: osx
       osx_image: xcode8
       compiler: clang
@@ -13,6 +20,14 @@ env:
     - MINCONDA_VERSION="latest"
     - MINCONDA_LINUX="Linux-x86_64"
     - MINCONDA_OSX="MacOSX-x86_64"
+before_install:
+    - |
+      # Configure build variables
+      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        export CXX=g++-$GCC CC=gcc-$GCC;
+      elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        export CXX=clang++ CC=clang;
+      fi
 install:
     # Define the version of miniconda to download
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -37,11 +52,6 @@ install:
     # Install host dependencies
     - mamba install openimageio=2.1.10 libsndfile=1.0.28 zlib=1.2.11 highfive=2.1.1 blosc gdal xtensor=0.21.2 -c conda-forge
     - mamba install ffmpeg=4.1.3 -c conda-forge  # openimageio is missing ffmpedg as a runtime requirement
-    # Install build dependencies
-    - mamba install cmake -c conda-forge
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-        mamba install gxx_linux-64 libgcc -c conda-forge;
-      fi
     # Activate root environment
     - source activate root
     # Build
